# FovDark3

./: .gitignore  .replit  README.md  admin.py  auth.py  comprar.html  create_sample_downloads.py  create_sample_products.py  create_test_buyer.py  darkfov_loader_1.py  darkfov_loader_2.py  database.py  domain_config.py  email_config_example.md  email_utils.py  fix_admin_privileges.py  fix_license_status.py  init_products.py  license.py  loader.py  main.py  mercadopago_integration.py  mercadopago_production_setup.md  mercadopago_routes.py  models.py  nixpacks.toml  package-lock.json  package.json  password_recovery.py  pyproject.toml  railway.json  railway_config.py  railway_env_example.md  railway_fix.py  railway_mercadopago_setup.md  railway_setup_guide.md  replit.md  requirements.txt  start.py  stripe_integration.py  (+7 more)
attached_assets/: Pasted--ChromeTransport-connectChrome-error-Error-message-MetaMask-extension-not-found-stack--1748615214589.txt  Pasted--Conectando-ao-PostgreSQL-em-produ-o-DEBUG-ENV-VAR-MERCADOPAGO-ACCESS-TOKEN-APP-USR-15211755-1748800173962.txt  Pasted--DARKFOV-CYBERPUNK-THEME-Vari-veis-root-background-dark--1748290101754.txt  Pasted--app-b5ee61944e59ff5f-js-38-LaunchDarkly-LaunchDarkly-client-in-1748617392598.txt  Pasted--extends-base-html-block-title-Painel-DarkFov-endblock-block-content-sec-1748288643686.txt  Pasted--extends-base-html-block-title-Painel-DarkFov-endblock-block-content-sec-1748290118771.txt  Pasted-Activity-web-Deployments-Variables-Metrics-Settings-web-production-0d7d-up-railway-app-EU-1748226319677.txt  loader.py  (+10 more)
static/: cookies.js  (+6 more)
(+25 files in other folders)
