[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "mercadopago>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sendgrid>=6.12.3",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]
